--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -128,7 +128,7 @@ a:focus {
 
 .home-listing .car-info + div svg,
 .home-carousel-listing .car-info + div svg {
-  margin-bottom: 0.25rem; }
+  margin: 0 0 0.25rem 0.25rem; }
 
 .footer {
   color: white;
