--- a/src/main/client/src/styles/scss/_homepage.scss
+++ b/src/main/client/src/styles/scss/_homepage.scss
@@ -12,11 +12,13 @@
 
 // Main Listing
 
-ul {
+ul,
+ol {
   list-style: none;
 }
 
-a:focus {
+a:focus,
+button:focus {
   box-shadow: none !important;
 }
 
