--- a/src/main/client/src/styles/scss/inventory/_carlistingvertical.scss
+++ b/src/main/client/src/styles/scss/inventory/_carlistingvertical.scss
@@ -2,9 +2,17 @@
   &::before {
     @include create-before(90%, 1px , null, null, 0, 5%, $light-grey);
   }
-  h4 {
-    text-overflow: ellipsis;
-    margin-bottom: 0;
+  a {
+    color: black;
+    text-decoration: none;
+    position: relative;
+    &:hover {
+      color: $light-blue;
+    }
+    h4 {
+      text-overflow: ellipsis;
+      margin-bottom: 0;
+    }
   }
   .price {
     @include background-spacing($light-blue, white, 0.10rem 0.70rem, null, relative);
@@ -47,31 +55,34 @@
       }
     }
   }
+}
 
-  .car-links {
-    text-align: center;
-    & li {
-      padding: 0.10rem 0.50rem;
-      margin: 0 1rem 1rem 0;
-      border: 1px solid $light-grey;
-      border-radius: 1.2rem;
-      & span {
-        color: gray;
-      }
-      & a {
-        display: inline-block;
-        padding: 0.25rem;
-        & svg {
-          margin-bottom: 0.25rem;
-          color: $light-blue;
-        }
-      }
+.car-links {
+  text-align: center;
+  & li {
+    & span {
+      line-height: 2;
     }
-    & li:not(:nth-of-type(1)) {
-      &:hover {
-        border-color: $light-blue;
+    padding: 0.10rem 0.50rem;
+    margin: 0 1rem 1rem 0;
+    border: 1px solid $light-grey;
+    border-radius: 1.2rem;
+    & span {
+      color: gray;
+    }
+    & a {
+      display: inline-block;
+      padding: 0.25rem;
+      & svg {
+        margin-bottom: 0.25rem;
         color: $light-blue;
       }
+    }
+  }
+  & li:not(:nth-of-type(1)) {
+    &:hover {
+      border-color: $light-blue;
+      color: $light-blue;
     }
   }
 }
