--- a/src/main/client/src/styles/scss/_mixins.scss
+++ b/src/main/client/src/styles/scss/_mixins.scss
@@ -17,3 +17,14 @@
   margin: $margin;
   position: $position;
 }
+
+@mixin flex-center() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin height-width($height, $width) {
+  height: $height !important;
+  width: $width;
+}
