--- a/src/main/client/src/styles/scss/_mixins.scss
+++ b/src/main/client/src/styles/scss/_mixins.scss
@@ -18,10 +18,10 @@
   position: $position;
 }
 
-@mixin flex-center() {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@mixin flex-center($display, $j-content, $align-items) {
+  display: $display;
+  justify-content: $j-content;
+  align-items: $align-items;
 }
 
 @mixin height-width($height, $width) {
