--- a/src/main/client/src/styles/scss/_individualcarpage.scss
+++ b/src/main/client/src/styles/scss/_individualcarpage.scss
@@ -59,7 +59,7 @@
         svg {
           @include height-width(2.5rem, 2.5rem);
         }
-        @include flex-center;
+        @include flex-center(flex, center, center);
         border-radius: 50%;
         @include height-width(3.5rem, 3.5rem);
         background-color: $primary-color;
