--- a/src/main/client/src/styles/scss/_inventory.scss
+++ b/src/main/client/src/styles/scss/_inventory.scss
@@ -36,7 +36,7 @@
       margin-right: 0.75rem;
     }
   }
-  span {
+  span[class^="text-muted"] {
     white-space: nowrap;
     line-height: 2.2;
   }
