--- a/src/main/client/src/styles/scss/inventory/_searchoptions.scss
+++ b/src/main/client/src/styles/scss/inventory/_searchoptions.scss
@@ -1,14 +1,45 @@
 .search-options {
   margin-top: -3rem;
   z-index: 50;
+
+
   form {
+    user-select: none;
     box-shadow: 0 5px 18px rgba(0,0,0,.18);
-  }
-  form > div:first-child {
-    background-color: $dark-color;
-    color: white;
-    svg {
-      margin: 0 0.50rem 0.30rem 0;
+    & > div:first-child {
+      background-color: $dark-color;
+      color: white;
+      svg {
+        margin: 0 0.50rem 0.30rem 0;
+      }
+    }
+
+
+    & .container-fluid .row .col-md-6 {
+      padding: 0.5rem 1rem 0;
+      & > div {
+        & .title {
+          cursor: pointer;
+        }
+        & .not-selected {
+          & > span:first-of-type {
+            cursor: pointer;
+            padding-bottom: 0.50rem;
+            &:hover {
+              color: $light-blue;
+            }
+          }
+        }
+
+        svg {
+          margin-bottom: 0.25rem;
+        }
+        & > div:first-of-type,
+        & > div:nth-of-type(2) > div,
+        .selected {
+          @include flex-center(flex, space-between, center);
+        }
+      }
     }
   }
 }
