--- a/src/main/client/src/styles/scss/inventory/_searchoptions.scss
+++ b/src/main/client/src/styles/scss/inventory/_searchoptions.scss
@@ -35,9 +35,19 @@
           margin-bottom: 0.25rem;
         }
         & > div:first-of-type,
-        & > div:nth-of-type(2) > div,
+        & > div:nth-of-type(2) > div > div,
         .selected {
           @include flex-center(flex, space-between, center);
+        }
+
+        & > div:nth-of-type(2) {
+          position: relative;
+          & > div[class^="px-2"] {
+            background-color: #dfe2e7;
+            z-index: 100;
+            position: absolute;
+            width: 100%;
+          }
         }
       }
     }
