Add quick search to homepage

--- a/src/main/client/src/styles/scss/index.scss
+++ b/src/main/client/src/styles/scss/index.scss
@@ -14,6 +14,7 @@
 @import "inventory/carlistingvertical";
 @import "reusable/navlinks";
 @import "individualcarpage";
+@import "homepage/searchinventory";
 
 * {
   margin: 0; padding: 0; box-sizing: border-box;
