--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -132,9 +132,6 @@ button:focus {
 .home-carousel-listing .car-info + div svg {
   margin: 0 0 0.25rem 0.25rem; }
 
-.search-inventory svg {
-  margin: 0 0.50rem 0.30rem 0; }
-
 .footer {
   color: white;
   font-size: 0.80rem; }
@@ -469,6 +466,34 @@ button:focus {
 .individual-car-page .features-tab svg {
   color: #cc601a;
   margin: 0 0.5rem 0.25rem 0; }
+
+.search-inventory h2 > svg {
+  margin: 0 0.50rem 0.30rem 0; }
+
+.search-inventory form .form-row .col-md-6 {
+  user-select: none; }
+  .search-inventory form .form-row .col-md-6 .title {
+    cursor: pointer; }
+    .search-inventory form .form-row .col-md-6 .title > div > svg {
+      margin-bottom: 0.25rem; }
+  .search-inventory form .form-row .col-md-6 .not-selected > span:first-of-type {
+    cursor: pointer;
+    padding-bottom: 0.50rem; }
+    .search-inventory form .form-row .col-md-6 .not-selected > span:first-of-type:hover {
+      color: #6c98e1; }
+  .search-inventory form .form-row .col-md-6 > div > div[class^="bg-light"],
+  .search-inventory form .form-row .col-md-6 .not-selected,
+  .search-inventory form .form-row .col-md-6 .selected {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .search-inventory form .form-row .col-md-6 > div > div:nth-of-type(2) {
+    position: relative; }
+    .search-inventory form .form-row .col-md-6 > div > div:nth-of-type(2) > div[class^="px-2"] {
+      background-color: #dfe2e7;
+      z-index: 100;
+      position: absolute;
+      width: 100%; }
 
 * {
   margin: 0;
