--- a/src/main/client/src/styles/scss/inventory/_searchoptions.scss
+++ b/src/main/client/src/styles/scss/inventory/_searchoptions.scss
@@ -17,14 +17,17 @@
 
     & .container-fluid .row .col-md-6 {
       padding: 0.5rem 1rem 0;
+      & > div[class^="bg-grey"] {
+        cursor: pointer;
+      }
       & > div {
         & .title {
           cursor: pointer;
         }
         & .not-selected {
+          padding-bottom: 0.50rem;
           & > span:first-of-type {
             cursor: pointer;
-            padding-bottom: 0.50rem;
             &:hover {
               color: $light-blue;
             }
