--- a/src/main/client/src/styles/scss/_individualcarpage.scss
+++ b/src/main/client/src/styles/scss/_individualcarpage.scss
@@ -86,7 +86,34 @@
   .features-tab {
     svg {
       color: $primary-color;
-      margin: 0 0.5rem 0.25rem 0;
+      margin: 0 0.5rem 0.3rem 0;
+    }
+
+    .contact-form {
+      h4 {
+        margin-bottom: 1rem;
+      }
+      p {
+        span {
+          color: gray;
+        }
+        margin-bottom: 0.35rem;
+        padding-top: 0.30rem;
+        font-weight: lighter;
+      }
+
+      form {
+        label {
+          margin: 0;
+          color: gray;
+          font-weight: lighter;
+        }
+        input {
+          &:focus {
+            background-color: white !important;
+          }
+        }
+      }
     }
   }
 }
