Add color to search options

--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -276,6 +276,36 @@ button:focus {
   justify-content: space-between;
   align-items: center; }
 
+.inventory .additional-search {
+  user-select: none; }
+  .inventory .additional-search > div:first-of-type {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.18); }
+  .inventory .additional-search > div:first-of-type,
+  .inventory .additional-search .each > span {
+    cursor: pointer;
+    font-size: 0.90rem; }
+  .inventory .additional-search .each:hover {
+    color: #6c98e1; }
+  .inventory .additional-search > div:first-of-type > div:first-of-type > div {
+    align-self: center;
+    margin: 0 0 0 0.50rem;
+    border-radius: 50%;
+    display: inline-block;
+    height: 1rem !important;
+    width: 1rem; }
+  .inventory .additional-search > div:first-of-type > div:last-of-type {
+    font-size: 1.5rem;
+    margin-top: -0.4rem;
+    margin-bottom: -0.3rem; }
+  .inventory .additional-search ul {
+    padding: 0.50rem 1rem; }
+    .inventory .additional-search ul li svg {
+      margin: 0 0.30rem 0.20rem 0; }
+    .inventory .additional-search ul li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+
 .search-options {
   margin-top: -3rem;
   z-index: 50; }
@@ -543,6 +573,15 @@ button:focus {
   font-size: 2rem; }
   .search-inventory .call-banner svg {
     margin-bottom: 0.30rem; }
+
+.navigation .address {
+  font-weight: lighter;
+  font-size: 0.95rem; }
+  .navigation .address svg {
+    vertical-align: 0 !important; }
+
+.navigation .phone {
+  font-weight: lighter; }
 
 * {
   margin: 0;
