--- a/src/main/client/src/styles/scss/index.scss
+++ b/src/main/client/src/styles/scss/index.scss
@@ -15,6 +15,7 @@
 @import "reusable/navlinks";
 @import "individualcarpage";
 @import "homepage/searchinventory";
+@import "navigation";
 
 * {
   margin: 0; padding: 0; box-sizing: border-box;
