--- a/src/main/client/src/styles/scss/index.scss
+++ b/src/main/client/src/styles/scss/index.scss
@@ -16,6 +16,7 @@
 @import "individualcarpage";
 @import "homepage/searchinventory";
 @import "navigation";
+@import "reusable/fullpagemodal";
 
 * {
   margin: 0; padding: 0; box-sizing: border-box;
