--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -254,6 +254,12 @@ button:focus {
     position: absolute;
     z-index: -1; }
 
+.inventory .v-available {
+  font-size: larger; }
+  .inventory .v-available span:first-of-type {
+    color: #cc601a;
+    font-weight: bold; }
+
 .inventory select {
   background-color: #f8f9fa; }
 
@@ -265,10 +271,6 @@ button:focus {
 
 .inventory .filter-search-icon svg:first-child {
   margin-right: 0.75rem; }
-
-.inventory span[class^="text-muted"] {
-  white-space: nowrap;
-  line-height: 2.2; }
 
 .inventory .sort-inventory > div[class^="bg-light"] {
   width: 10rem;
@@ -306,6 +308,12 @@ button:focus {
       justify-content: space-between;
       align-items: center; }
 
+.inventory .options-selected {
+  font-size: 0.80rem;
+  box-shadow: 0 1px 3px rgba(59, 62, 68, 0.3); }
+  .inventory .options-selected > div:nth-of-type(2):hover {
+    cursor: pointer; }
+
 .search-options {
   margin-top: -3rem;
   z-index: 50; }
@@ -319,8 +327,6 @@ button:focus {
         margin: 0 0.50rem 0.30rem 0; }
     .search-options form .container-fluid .row .col-md-6 {
       padding: 0.5rem 1rem 0; }
-      .search-options form .container-fluid .row .col-md-6 > div[class^="bg-grey"] {
-        cursor: pointer; }
       .search-options form .container-fluid .row .col-md-6 > div .title {
         cursor: pointer; }
       .search-options form .container-fluid .row .col-md-6 > div .not-selected {
@@ -415,6 +421,7 @@ button:focus {
     .car-links li span {
       color: gray; }
     .car-links li a {
+      cursor: pointer;
       display: inline-block;
       padding: 0.25rem; }
       .car-links li a svg {
@@ -575,13 +582,35 @@ button:focus {
     margin-bottom: 0.30rem; }
 
 .navigation .address {
-  font-weight: lighter;
-  font-size: 0.95rem; }
+  font-weight: lighter; }
   .navigation .address svg {
     vertical-align: 0 !important; }
 
 .navigation .phone {
   font-weight: lighter; }
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  outline: 0;
+  background-color: rgba(0, 0, 0, 0.8); }
+  .modal .test-drive {
+    background-color: white; }
+    .modal .test-drive h5,
+    .modal .test-drive p {
+      margin: 0; }
+    .modal .test-drive label {
+      margin: 0; }
 
 * {
   margin: 0;
