--- a/src/main/client/src/styles/scss/inventory/_carlistingvertical.scss
+++ b/src/main/client/src/styles/scss/inventory/_carlistingvertical.scss
@@ -71,6 +71,7 @@
       color: gray;
     }
     & a {
+      cursor: pointer;
       display: inline-block;
       padding: 0.25rem;
       & svg {
