--- a/src/main/client/src/styles/scss/index.scss
+++ b/src/main/client/src/styles/scss/index.scss
@@ -17,6 +17,7 @@
 @import "homepage/searchinventory";
 @import "navigation";
 @import "reusable/fullpagemodal";
+@import "compare";
 
 * {
   margin: 0; padding: 0; box-sizing: border-box;
