--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -11,7 +11,9 @@
     left: 10%;
     background-color: #ccc; }
   .image-background {
-    height: 30vh; } }
+    height: 30vh; }
+  .compare .compare-column td:first-of-type {
+    display: table-cell; } }
 
 @media only screen and (min-width: 576px) {
   .footer div div:nth-of-type(n+2)::before {
@@ -23,7 +25,9 @@
     left: 0;
     background-color: #ccc; }
   .image-background {
-    height: 50vh; } }
+    height: 50vh; }
+  .compare .compare-column td:first-of-type {
+    display: none; } }
 
 @media only screen and (max-width: 767px) {
   .why-us [class^='col']:nth-of-type(n+2)::before {
@@ -125,15 +129,21 @@ button:focus {
     left: 10%;
     background-color: #ccc; }
 
+.home-listing .car-info + div svg,
+.home-carousel-listing .car-info + div svg {
+  margin: 0 0 0.25rem 0.25rem; }
+
 .home-listing .price,
-.home-carousel-listing .price {
+.home-carousel-listing .price,
+.compare-column .price {
   background-color: #6c98e1;
   color: white;
   padding: 0.15rem;
   position: relative;
   z-index: 10; }
   .home-listing .price::before,
-  .home-carousel-listing .price::before {
+  .home-carousel-listing .price::before,
+  .compare-column .price::before {
     content: '';
     position: absolute;
     width: 1rem;
@@ -143,10 +153,6 @@ button:focus {
     background-color: #6c98e1;
     transform: skew(-25deg, 0deg);
     z-index: -1; }
-
-.home-listing .car-info + div svg,
-.home-carousel-listing .car-info + div svg {
-  margin: 0 0 0.25rem 0.25rem; }
 
 .footer {
   color: white;
@@ -255,7 +261,8 @@ button:focus {
     z-index: -1; }
 
 .inventory .v-available {
-  font-size: larger; }
+  font-size: larger;
+  white-space: nowrap; }
   .inventory .v-available span:first-of-type {
     color: #cc601a;
     font-weight: bold; }
@@ -325,31 +332,52 @@ button:focus {
       color: white; }
       .search-options form > div:first-child svg {
         margin: 0 0.50rem 0.30rem 0; }
-    .search-options form .container-fluid .row .col-md-6 {
-      padding: 0.5rem 1rem 0; }
-      .search-options form .container-fluid .row .col-md-6 > div .title {
-        cursor: pointer; }
-      .search-options form .container-fluid .row .col-md-6 > div .not-selected {
-        padding-bottom: 0.50rem; }
-        .search-options form .container-fluid .row .col-md-6 > div .not-selected > span:first-of-type {
-          cursor: pointer; }
-          .search-options form .container-fluid .row .col-md-6 > div .not-selected > span:first-of-type:hover {
-            color: #6c98e1; }
-      .search-options form .container-fluid .row .col-md-6 > div svg {
-        margin-bottom: 0.25rem; }
-      .search-options form .container-fluid .row .col-md-6 > div > div:first-of-type,
-      .search-options form .container-fluid .row .col-md-6 > div > div:nth-of-type(2) > div > div,
-      .search-options form .container-fluid .row .col-md-6 > div .selected {
-        display: flex;
-        justify-content: space-between;
-        align-items: center; }
-      .search-options form .container-fluid .row .col-md-6 > div > div:nth-of-type(2) {
-        position: relative; }
-        .search-options form .container-fluid .row .col-md-6 > div > div:nth-of-type(2) > div[class^="px-2"] {
-          background-color: #dfe2e7;
-          z-index: 100;
-          position: absolute;
-          width: 100%; }
+
+.search-inventory .col-md-6 div,
+.search-options .col-md-6 div {
+  user-select: none; }
+  .search-inventory .col-md-6 div > div[class^="bg-grey"],
+  .search-options .col-md-6 div > div[class^="bg-grey"] {
+    cursor: pointer; }
+  .search-inventory .col-md-6 div .title,
+  .search-options .col-md-6 div .title {
+    cursor: pointer; }
+    .search-inventory .col-md-6 div .title > div > svg,
+    .search-options .col-md-6 div .title > div > svg {
+      margin-bottom: 0.25rem; }
+  .search-inventory .col-md-6 div .selected,
+  .search-options .col-md-6 div .selected {
+    padding: 0.5rem; }
+  .search-inventory .col-md-6 div .not-selected,
+  .search-options .col-md-6 div .not-selected {
+    padding: 0.5rem 0.5rem 0; }
+    .search-inventory .col-md-6 div .not-selected > span:first-of-type,
+    .search-options .col-md-6 div .not-selected > span:first-of-type {
+      cursor: pointer; }
+      .search-inventory .col-md-6 div .not-selected > span:first-of-type:hover,
+      .search-options .col-md-6 div .not-selected > span:first-of-type:hover {
+        color: #6c98e1; }
+  .search-inventory .col-md-6 div .not-selected:last-of-type,
+  .search-options .col-md-6 div .not-selected:last-of-type {
+    padding-bottom: 0.5rem; }
+  .search-inventory .col-md-6 div > div > div[class^="bg-light"],
+  .search-inventory .col-md-6 div .not-selected,
+  .search-inventory .col-md-6 div .selected,
+  .search-options .col-md-6 div > div > div[class^="bg-light"],
+  .search-options .col-md-6 div .not-selected,
+  .search-options .col-md-6 div .selected {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .search-inventory .col-md-6 div > div > div:nth-of-type(2),
+  .search-options .col-md-6 div > div > div:nth-of-type(2) {
+    position: relative; }
+    .search-inventory .col-md-6 div > div > div:nth-of-type(2) > div,
+    .search-options .col-md-6 div > div > div:nth-of-type(2) > div {
+      background-color: #dfe2e7;
+      z-index: 100;
+      position: absolute;
+      width: 100%; }
 
 .car-listing-vertical::before {
   content: '';
@@ -447,14 +475,6 @@ button:focus {
     .render-nav-links .pagination div:nth-of-type(1) > button:nth-of-type(n+2) {
       margin-left: 0.5rem; }
 
-.individual-car-page ol {
-  border-bottom: 1px solid #ccc; }
-  .individual-car-page ol li a {
-    color: rgba(0, 0, 0, 0.5);
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    text-decoration: none; }
-
 .individual-car-page .col img {
   cursor: pointer; }
 
@@ -539,35 +559,16 @@ button:focus {
 .individual-car-page .features-tab .contact-form form input:focus {
   background-color: white !important; }
 
+.bread {
+  border-bottom: 1px solid #ccc; }
+  .bread li a {
+    color: rgba(0, 0, 0, 0.5);
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    text-decoration: none; }
+
 .search-inventory h2 > svg {
   margin: 0 0.50rem 0.30rem 0; }
-
-.search-inventory form .form-row .col-md-6 {
-  user-select: none; }
-  .search-inventory form .form-row .col-md-6 > div[class^="bg-grey"] {
-    cursor: pointer; }
-  .search-inventory form .form-row .col-md-6 .title {
-    cursor: pointer; }
-    .search-inventory form .form-row .col-md-6 .title > div > svg {
-      margin-bottom: 0.25rem; }
-  .search-inventory form .form-row .col-md-6 .not-selected > span:first-of-type {
-    cursor: pointer;
-    padding-bottom: 0.50rem; }
-    .search-inventory form .form-row .col-md-6 .not-selected > span:first-of-type:hover {
-      color: #6c98e1; }
-  .search-inventory form .form-row .col-md-6 > div > div[class^="bg-light"],
-  .search-inventory form .form-row .col-md-6 .not-selected,
-  .search-inventory form .form-row .col-md-6 .selected {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-  .search-inventory form .form-row .col-md-6 > div > div:nth-of-type(2) {
-    position: relative; }
-    .search-inventory form .form-row .col-md-6 > div > div:nth-of-type(2) > div[class^="px-2"] {
-      background-color: #dfe2e7;
-      z-index: 100;
-      position: absolute;
-      width: 100%; }
 
 .search-inventory .call-banner {
   margin: 0 0.05rem;
@@ -588,6 +589,33 @@ button:focus {
 
 .navigation .phone {
   font-weight: lighter; }
+
+.navigation ul {
+  margin: 0; }
+
+.navigation ul:last-of-type svg,
+.navigation ul:last-of-type a span {
+  color: rgba(0, 0, 0, 0.5); }
+
+.navigation ul:last-of-type a:hover {
+  background-color: white; }
+
+.navigation ul:last-of-type .active {
+  color: rgba(0, 0, 0, 0.5) !important;
+  background-color: #f8f9fa; }
+  .navigation ul:last-of-type .active svg {
+    color: rgba(0, 0, 0, 0.5); }
+
+.navigation .counter {
+  height: 1.3rem !important;
+  width: 1.3rem;
+  background-color: #6c98e1;
+  line-height: 1.3;
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: white;
+  border-radius: 50%; }
 
 .modal {
   display: flex;
@@ -611,6 +639,15 @@ button:focus {
       margin: 0; }
     .modal .test-drive label {
       margin: 0; }
+
+.compare td:first-of-type {
+  color: gray; }
+
+.compare td {
+  font-size: 0.80rem;
+  padding: 0.65rem 0; }
+  .compare td:empty:after {
+    content: "\00a0"; }
 
 * {
   margin: 0;
