--- a/src/main/client/src/styles/scss/inventory/_searchoptions.scss
+++ b/src/main/client/src/styles/scss/inventory/_searchoptions.scss
@@ -13,43 +13,48 @@
         margin: 0 0.50rem 0.30rem 0;
       }
     }
+  }
+}
 
-
-    & .container-fluid .row .col-md-6 {
-      padding: 0.5rem 1rem 0;
-      & > div {
-        & .title {
-          cursor: pointer;
-        }
-        & .not-selected {
-          padding-bottom: 0.50rem;
-          & > span:first-of-type {
-            cursor: pointer;
-            &:hover {
-              color: $light-blue;
-            }
-          }
-        }
-
-        svg {
-          margin-bottom: 0.25rem;
-        }
-        & > div:first-of-type,
-        & > div:nth-of-type(2) > div > div,
-        .selected {
-          @include flex-center(flex, space-between, center);
-        }
-
-        & > div:nth-of-type(2) {
-          position: relative;
-          & > div[class^="px-2"] {
-            background-color: #dfe2e7;
-            z-index: 100;
-            position: absolute;
-            width: 100%;
-          }
-        }
+.search-inventory .col-md-6 div,
+.search-options .col-md-6 div {
+  user-select: none;
+  & > div[class^="bg-grey"] {
+    cursor: pointer;
+  }
+  .title {
+    cursor: pointer;
+    & > div > svg {
+      margin-bottom: 0.25rem;
+    }
+  }
+  .selected {
+    padding: 0.5rem;
+  }
+  .not-selected {
+    padding: 0.5rem 0.5rem 0;
+    & > span:first-of-type {
+      cursor: pointer;
+      &:hover {
+        color: $light-blue;
       }
+    }
+  }
+  .not-selected:last-of-type {
+    padding-bottom: 0.5rem;
+  }
+  & > div > div[class^="bg-light"],
+  .not-selected,
+  .selected {
+    @include flex-center(flex, space-between, center);
+  }
+  & > div > div:nth-of-type(2) {
+    position: relative;
+    & > div {
+      background-color: #dfe2e7;
+      z-index: 100;
+      position: absolute;
+      width: 100%;
     }
   }
 }
