--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -459,6 +459,14 @@ button:focus {
     border-color: #6c98e1;
     color: #6c98e1; }
 
+.bg-light-blue {
+  background-color: #6c98e1;
+  color: white; }
+  .bg-light-blue:hover {
+    color: white !important; }
+  .bg-light-blue svg {
+    color: white !important; }
+
 .render-nav-links nav {
   width: 100%; }
 
@@ -567,6 +575,11 @@ button:focus {
     font-size: 0.8rem;
     text-decoration: none; }
 
+.individual-car-page .features-tab svg,
+.compare svg {
+  color: #cc601a;
+  margin: 0 0.25rem 0.25rem 0; }
+
 .search-inventory h2 > svg {
   margin: 0 0.50rem 0.30rem 0; }
 
@@ -648,6 +661,40 @@ button:focus {
   padding: 0.65rem 0; }
   .compare td:empty:after {
     content: "\00a0"; }
+
+.inventory .snack-bar,
+.individual-car-page .snack-bar {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  min-width: 15rem;
+  font-size: 0.9rem;
+  color: white;
+  padding: 1rem;
+  position: fixed;
+  bottom: 1rem;
+  left: 50%;
+  z-index: 2000;
+  visibility: hidden; }
+  .inventory .snack-bar.show,
+  .individual-car-page .snack-bar.show {
+    visibility: visible;
+    animation: fadein 0.5s, fadeout 0.5s 1.5s; }
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0; }
+  to {
+    bottom: 1rem;
+    opacity: 1; } }
+
+@keyframes fadeout {
+  from {
+    bottom: 1rem;
+    opacity: 1; }
+  to {
+    bottom: 0;
+    opacity: 0; } }
 
 * {
   margin: 0;
