--- a/src/main/client/src/styles/scss/index.scss
+++ b/src/main/client/src/styles/scss/index.scss
@@ -18,6 +18,7 @@
 @import "navigation";
 @import "reusable/fullpagemodal";
 @import "compare";
+@import "reusable/snackbar";
 
 * {
   margin: 0; padding: 0; box-sizing: border-box;
