--- a/src/main/client/src/styles/css/index.css
+++ b/src/main/client/src/styles/css/index.css
@@ -515,35 +515,65 @@ button:focus {
     border-top: none !important;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
 
-.individual-car-page .side-panel > div:nth-of-type(2) {
-  padding: 0.80rem 0.90rem;
+.individual-car-page .side-panel .gas > div:nth-of-type(2) {
+  margin: 0 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 3.5rem !important;
+  width: 3.5rem;
+  background-color: #cc601a; }
+  .individual-car-page .side-panel .gas > div:nth-of-type(2) svg {
+    height: 2.5rem !important;
+    width: 2.5rem; }
+
+.individual-car-page .side-panel .gas > div:first-of-type,
+.individual-car-page .side-panel .gas > div:last-of-type {
+  align-self: center; }
+  .individual-car-page .side-panel .gas > div:first-of-type > span:first-of-type,
+  .individual-car-page .side-panel .gas > div:last-of-type > span:first-of-type {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.25rem; }
+  .individual-car-page .side-panel .gas > div:first-of-type > span:last-of-type,
+  .individual-car-page .side-panel .gas > div:last-of-type > span:last-of-type {
+    font-size: 0.8rem; }
+  .individual-car-page .side-panel .gas > div:first-of-type span,
+  .individual-car-page .side-panel .gas > div:last-of-type span {
+    display: block; }
+
+.individual-car-page .side-panel .gas,
+.individual-car-page .side-panel .calculator {
+  padding: 1rem 0.90rem;
   border: 3px solid #f8f9fa; }
-  .individual-car-page .side-panel > div:nth-of-type(2) > div:nth-of-type(2) {
-    margin: 0 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    height: 3.5rem !important;
-    width: 3.5rem;
-    background-color: #cc601a; }
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:nth-of-type(2) svg {
-      height: 2.5rem !important;
-      width: 2.5rem; }
-  .individual-car-page .side-panel > div:nth-of-type(2) > div:first-of-type,
-  .individual-car-page .side-panel > div:nth-of-type(2) > div:last-of-type {
-    align-self: center; }
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:first-of-type > span:first-of-type,
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:last-of-type > span:first-of-type {
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.25rem; }
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:first-of-type > span:last-of-type,
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:last-of-type > span:last-of-type {
-      font-size: 0.8rem; }
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:first-of-type span,
-    .individual-car-page .side-panel > div:nth-of-type(2) > div:last-of-type span {
-      display: block; }
+
+.individual-car-page .side-panel .calculator h5 {
+  font-weight: normal; }
+
+.individual-car-page .side-panel .calculator label {
+  color: gray; }
+
+.individual-car-page .side-panel .calculator svg {
+  height: 2rem !important;
+  width: 2rem;
+  color: #cc601a;
+  margin: 0.20rem 0.50rem 0; }
+
+.individual-car-page .side-panel .calculator .result::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: -0.5rem;
+  left: 1.5rem;
+  display: block;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid transparent;
+  border-bottom: 1rem solid #6c98e1; }
+
+.individual-car-page .side-panel .calculator .result span {
+  font-size: 0.90rem; }
 
 .individual-car-page .features-tab svg {
   color: #cc601a;
